# Agribot

./: .gitmodules  README.md  imp.txt
agribot_inno_demo/: CMakeLists.txt  package.xml
agribot_inno_demo/src/: agribot_inno_demo_node.cpp
chimera_description/: CMakeLists.txt  README.org  package.xml
chimera_description/launch/: bringup.launch  display.launch
chimera_description/meshes/: base_link_collision.stl  end_effector.dae  gripper_base.stl  left-gripper.stl  left_finger.stl  right-gripper.stl  right_finger.stl  slamtec_lidar.stl  track.stl  wrist.dae
chimera_description/rviz/: bringup_config.rviz  urdf.rviz
chimera_description/scripts/: maniStack.py  xy_coord.py  z_coord.py
chimera_description/urdf/: chimera.urdf  chimera.urdf.xacro  gripper.urdf.xacro  inertial.xacro  mycobot280_arduino.urdf.xacro  tracks.urdf.xacro
chimera_moveit/: .setup_assistant  CMakeLists.txt  README.org  package.xml
chimera_moveit/config/: chimera.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
chimera_moveit/launch/: chimera_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
chimera_moveit_gripper/: CMakeLists.txt  package.xml
chimera_moveit_gripper/config/: chimera.srdf  chomp_planning.yaml  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
chimera_moveit_gripper/launch/: chimera_moveit_controller_manager.launch.xml  chimera_moveit_gripper.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hardware.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
chimera_moveit_gripper/scripts/: 1_xyz_coord.py  4_gripper_gui_control.py  cord_to_angles_gripper.py  hardware_control.py  hardware_control_mycobot_lib.py  ik_slover.py  mycbot_gripper_control.py  xyz_coord.py
chimera_moveit_gripper/scripts/scripts/: 2_cord_to_angles_gripper.py  3_hardware_control.py  4_gripper_gui_control.py  hsv_slider.py  ik_slover.py  xy_coord_clicked.py
chimera_sim/: CMakeLists.txt  README.org  package.xml
chimera_sim/config/: gazebo_controllers.yaml
chimera_sim/launch/: chimera.launch
depth_selector/: CMakeLists.txt  package.xml
depth_selector/launch/: depth_selector.launch  depth_selector1.launch
depth_selector/scripts/: depth_selector.py  depth_selector.py.save  depth_selector.py.save.1  depth_selector1.py  depth_selector_publisher.py
detect_tomato/: CMakeLists.txt  package.xml
detect_tomato/launch/: model_stream.launch  tomato_detection.launch  tomato_model_detection.launch  tomato_onnx_cpp_model.launch  tomato_onnx_py_model.launch
detect_tomato/scripts/: direct_tomato_detector.py  direct_tomato_detector2.py  model_stream_client.py  new_tomato_detect_model.py  tomato_detect_model.py  tomato_detect_model_1.py  tomato_detector.py  tomato_onnx_model.py
detect_tomato/scripts/.ipynb_checkpoints/: tomato_detector-checkpoint.py
detect_tomato/src/: tomato_detector_node.cpp
go_spray_plants/: CMakeLists.txt  package.xml
go_spray_plants/src/: go_spray_plants_node.cpp
move_to_tomato/: CMakeLists.txt  package.xml
move_to_tomato/launch/: move_to_tomato.launch
